# codingame_runner

./: .gitignore  Cargo.toml
bots/common/: Cargo.toml
bots/common/src/: lib.rs
cg_statement/src/: lib.rs  main.rs  rules.rs  style.css
cg_statement/tests/: tron.rs
cg_statement/tests/fixtures/: paste.html
cgio_build/src/: lib.rs
common/: Cargo.toml
common/src/: engine.rs  lib.rs
cpp_flatten/src/: lib.rs  main.rs
cpp_flatten/tests/: e2e_compile.rs  flatten.rs
crates/bot_manifest/: Cargo.toml
crates/bot_manifest/src/: lib.rs
crates/cg_statement/: Cargo.toml
crates/cg_statement/src/: lib.rs  main.rs  rules.rs  style.css
crates/cg_statement/tests/: tron.rs
crates/cgio_build/: Cargo.toml
crates/cgio_build/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: engine.rs  lib.rs
crates/cpp_flatten/: Cargo.toml
crates/cpp_flatten/src/: lib.rs  main.rs
crates/cpp_flatten/tests/: e2e_compile.rs  flatten.rs
crates/flatten/: .gitignore  Cargo.toml  EXPAND.md  EXTERNAL.md  README.md  REVIEW.md  ROADMAP.md  RUSTC_DEV.md  SHAKING.md  TODO_HUMAN.md  VENDORING.md
crates/flatten/presets/: codingame.txt  infra.txt
crates/flatten/src/: cfg.rs  edits.rs  error.rs  external_file.rs  lib.rs  main.rs  minify.rs  scanner.rs  source_file.rs  vendor.rs
crates/flatten/tests/: integration.rs  snapshots.rs
crates/flatten/tests/snapshots/: snapshots__snap_basic_inlining.snap  snapshots__snap_cfg_skipped_mod_is_preserved.snap  snapshots__snap_inline_mod_with_external_nested.snap  snapshots__snap_nested_via_foo_rs.snap  snapshots__snap_path_attr_resolves.snap  snapshots__snap_visibility_variants.snap
crates/flatten_expand/: Cargo.toml
crates/flatten_expand/src/: main.rs
crates/flatten_expand/tests/fixtures/derive_hello/: Cargo.toml
crates/flatten_expand/tests/fixtures/derive_hello/src/: lib.rs
crates/runner/: Cargo.toml
crates/runner/src/: lib.rs  main.rs
crates/runner/tests/: tictactoe_integration.rs  tron_integration.rs
crates/tournament/: Cargo.toml
crates/tournament/src/: lib.rs  main.rs  pairwise_stats.rs
crates/viz/src/: lib.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: bot_manifest.rs  main.rs
crates/xtask/templates/bot/cpp/: Cargo.toml.hbs  bot.cpp.hbs  main.cpp.hbs  strategy.h.hbs
crates/xtask/templates/bot/cpp/src/: lib.rs.hbs  main.rs.hbs
crates/xtask/templates/bot/rust/: Cargo.toml.hbs
crates/xtask/templates/bot/rust/src/: lib.rs.hbs  main.rs.hbs
crates/xtask/templates/game/defs/: Cargo.toml.hbs
crates/xtask/templates/game/defs/include/: {{name}}_defs.h.hbs  {{name}}_defs_io.h.hbs
crates/xtask/templates/game/defs/src/: lib.rs.hbs
crates/xtask/templates/game/game/src/: lib.rs.hbs
docs/: bot-submission.md  code-review.md  iteration-workflow-roadmap.md  perf-analysis.md  replay-caching.md  tournament.md  v2-bot.md  wire-codegen.md
fantastic_bits/bots/baseline_rs/: Cargo.toml
fantastic_bits/bots/v1_cpp/: Cargo.toml  bot.cpp  build.rs
fantastic_bits/bots/v1_cpp/src/: lib.rs
fantastic_bits/bots/v1_cpp/v1/: fantastic_bits.cpp
fantastic_bits/fantastic_bits_cpp/: Cargo.toml  bot.cpp  build.rs
fantastic_bits/fantastic_bits_defs/: Cargo.toml
fantastic_bits/fantastic_bits_defs/include/: fantastic_bits_defs.h
fantastic_bits/fantastic_bits_defs/src/: lib.rs
fantastic_bits/fantastic_bits_game/: instructions.html
fantastic_bits/fantastic_bits_game/src/: lib.rs
fantastic_bits/fantastic_bits_rs/: Cargo.toml
fantastic_bits/fantastic_bits_rs/src/: lib.rs  main.rs
fantastic_bits/fantastic_bits_viz/src/: main.rs
fantastic_bits/viz/: Cargo.toml
games/fantastic_bits/bots/baseline_rs/: Cargo.toml  bot.toml
games/fantastic_bits/bots/baseline_rs/src/: lib.rs  main.rs
games/fantastic_bits/bots/v1_cpp/: Cargo.toml  bot.cpp  bot.toml  build.rs  main.cpp  strategy.h
games/fantastic_bits/bots/v1_cpp/src/: main.rs
games/fantastic_bits/defs/: Cargo.toml
games/fantastic_bits/defs/include/: fantastic_bits_defs.h  fantastic_bits_defs_io.h
games/fantastic_bits/defs/src/: lib.rs
games/fantastic_bits/game/: Cargo.toml  instructions.html
games/spider_attack/bots/v1_cpp/: Cargo.toml  bot.toml  main.cpp  strategy.h
games/spider_attack/bots/v1_cpp/src/: main.rs
games/spider_attack/defs/: Cargo.toml
games/spider_attack/game/: Cargo.toml  instructions.html  instructions_original.html
games/spider_attack/viz/: Cargo.toml
games/tictactoe/defs/: Cargo.toml  build.rs
games/tictactoe/defs/include/: tictactoe_defs.h  tictactoe_defs_io.h
games/tictactoe/defs/src/: lib.rs
games/tron/bots/baseline_cpp/: Cargo.toml  bot.cpp  bot.toml  build.rs  main.cpp  strategy.h
games/tron/bots/baseline_cpp/src/: main.rs
games/tron/bots/baseline_cpp/v1/: tron.cpp
games/tron/bots/baseline_cpp/v2/: tron.cpp
games/tron/bots/baseline_rs/: Cargo.toml  bot.toml
games/tron/bots/baseline_rs/src/: lib.rs  main.rs
games/tron/defs/: Cargo.toml
macros/: Cargo.toml
runner/: Cargo.toml
runner/src/: lib.rs  main.rs
runner/tests/: tictactoe_integration.rs  tron_integration.rs
tictactoe/bots/baseline_cpp/: Cargo.toml  build.rs  main.cpp
tictactoe/bots/baseline_cpp/src/: main.rs
tictactoe/tictactoe_cpp/: Cargo.toml  bot.cpp  build.rs  main.cpp
tictactoe/tictactoe_cpp/src/: lib.rs  main.rs
tictactoe/tictactoe_defs/: Cargo.toml  build.rs
tictactoe/tictactoe_defs/include/: tictactoe_defs.h  tictactoe_defs_io.h
tictactoe/tictactoe_defs/src/: lib.rs
tictactoe/tictactoe_game/: Cargo.toml
tictactoe/tictactoe_rs/: Cargo.toml
tictactoe/tictactoe_viz/: Cargo.toml
tournament/: Cargo.toml
tournament/src/: lib.rs  main.rs
tron/defs/: Cargo.toml
tron/defs/include/: tron_defs_io.h
tron/defs/src/: lib.rs
tron/game/: Cargo.toml  instructions.html
tron/tron_cpp/: Cargo.toml  bot.cpp  build.rs  main.cpp  main.h
tron/tron_cpp/src/: main.rs
tron/tron_defs/: Cargo.toml  build.rs
tron/tron_game/: Cargo.toml
tron/tron_impl/: Cargo.toml
tron/tron_rs/: Cargo.toml
tron/tron_viz/: Cargo.toml
viz/: Cargo.toml
viz/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+86 files in other folders)
