[workspace]
resolver = "3"
members = [
    "runner",
    "macros",
    "common",
    "cgio_build",
    "xtask",
    "viz",
    "cpp_flatten",
    "tournament",
    "cg_statement",
    "tron/defs",
    "tron/game",
    "tron/viz",
    "tron/bots/baseline_rs",
    "tron/bots/baseline_cpp",
    "tictactoe/defs",
    "tictactoe/game",
    "tictactoe/viz",
    "tictactoe/bots/baseline_rs",
    "tictactoe/bots/baseline_cpp",
    "fantastic_bits/defs",
    "fantastic_bits/game",
    "fantastic_bits/viz",
    "fantastic_bits/bots/baseline_rs",
    "fantastic_bits/bots/v1_cpp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Keep symbols + line tables in release builds so profilers (samply,
# Instruments, perf) can map sampled addresses back to function +
# line. Near-zero binary-size cost vs full debug info; absolutely
# essential for flamegraphs to be useful. cargo also propagates this
# to cc-rs via `DEBUG=true`, so C++ FFI bots get `-g1` automatically.
[profile.release]
debug = "line-tables-only"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
libloading = "0.9.0"
thiserror = "2.0.18"
codingame_macros = { path = "macros" }
common = { path = "common" }
tron_defs = { path = "tron/defs" }
tron_game = { path = "tron/game" }
tictactoe_defs = { path = "tictactoe/defs" }
tictactoe_game = { path = "tictactoe/game" }
viz = { path = "viz" }
macroquad = "0.4"
egui-macroquad = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
cc = "1"
rand = "0.10.1"
fantastic_bits_defs = { path = "fantastic_bits/defs" }
fantastic_bits_game = { path = "fantastic_bits/game" }
cgio_build = { path = "cgio_build" }
