[workspace]
resolver = "3"
members = [
    # Shared infrastructure crates — engine, runner, tools.
    "crates/runner",
    "crates/macros",
    "crates/common",
    "crates/cgio_build",
    "crates/xtask",
    "crates/viz",
    "crates/cpp_flatten",
    "crates/flatten",
    "crates/tournament",
    "crates/bot_manifest",
    # Shared bot infrastructure (deliberately tiny dep footprint so
    # bundled bots stay vendor-clean for CodinGame submission).
    "bots/common",
    "crates/cg_statement",
    # Per-game engine + bots.
    "games/tron/defs",
    "games/tron/game",
    "games/tron/viz",
    "games/tron/bots/baseline_rs",
    "games/tron/bots/baseline_cpp",
    "games/tron/bots/v1_cpp",
    "games/tron/bots/v2_cpp",
    "games/fantastic_bits/defs",
    "games/fantastic_bits/game",
    "games/fantastic_bits/viz",
    "games/fantastic_bits/bots/baseline_rs",
    "games/fantastic_bits/bots/v1_cpp",
]

# Built on its own toolchain (nightly + rustc-dev) — see
# crates/flatten_expand/rust-toolchain.toml. Excluding keeps the
# stable-toolchain workspace build clean; users invoke
# `cargo build` from inside that directory when they need it.
# (Test-crate fixtures under crates/flatten/test-crates/* each carry
# their own empty `[workspace]` so they don't escalate to ours.)
exclude = ["crates/flatten_expand"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Keep symbols + line tables in release builds so profilers (samply,
# Instruments, perf) can map sampled addresses back to function +
# line. Near-zero binary-size cost vs full debug info; absolutely
# essential for flamegraphs to be useful. cargo also propagates this
# to cc-rs via `DEBUG=true`, so C++ FFI bots get `-g1` automatically.
[profile.release]
debug = "line-tables-only"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
libloading = "0.9.0"
thiserror = "2.0.18"
macroquad = "0.4"
egui-macroquad = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
cc = "1"
rand = "0.10.1"

codingame_macros = { path = "crates/macros" }
common = { path = "crates/common" }
viz = { path = "crates/viz" }
cgio_build = { path = "crates/cgio_build" }
bot_common = { path = "bots/common" }
bot_manifest = { path = "crates/bot_manifest" }

tron_defs = { path = "games/tron/defs" }
tron_game = { path = "games/tron/game" }
fantastic_bits_defs = { path = "games/fantastic_bits/defs" }
fantastic_bits_game = { path = "games/fantastic_bits/game" }
