[workspace]
resolver = "3"
members = [
    # Shared infrastructure crates — engine, runner, tools.
    "crates/runner",
    "crates/common",
    "crates/cgio_build",
    "crates/xtask",
    "crates/viz",
    "crates/cpp_flatten",
    "crates/flatten",
    "crates/tournament",
    "crates/bot_manifest",
    # Shared bot infrastructure (deliberately tiny dep footprint so
    # bundled bots stay vendor-clean for CodinGame submission).
    "bots/common",
    "crates/cg_statement",
    # Per-game engine + bots.
    "games/tron/defs",
    "games/tron/game",
    "games/tron/viz",
    "games/tron/bots/baseline_rs",
    "games/tron/bots/baseline_cpp",
    "games/tron/bots/v1_cpp",
    "games/tron/bots/v2_cpp",
    "games/fantastic_bits/defs",
    "games/fantastic_bits/game",
    "games/fantastic_bits/viz",
    "games/fantastic_bits/bots/baseline_rs",
    "games/fantastic_bits/bots/v1_cpp",
]

# Built on its own toolchain (nightly + rustc-dev) — see
# crates/flatten_expand/rust-toolchain.toml. Excluding keeps the
# stable-toolchain workspace build clean; users invoke
# `cargo build` from inside that directory when they need it.
# (Test-crate fixtures under crates/flatten/test-crates/* each carry
# their own empty `[workspace]` so they don't escalate to ours.)
exclude = ["crates/flatten_expand"]

[workspace.package]
version = "0.1.0"
edition = "2024"

# Keep symbols + line tables in release builds so profilers (samply,
# Instruments, perf) can map sampled addresses back to function +
# line. Near-zero binary-size cost vs full debug info; absolutely
# essential for flamegraphs to be useful. cargo also propagates this
# to cc-rs via `DEBUG=true`, so C++ bots get `-g1` automatically.
[profile.release]
debug = "line-tables-only"

# `cargo xtask profile` builds bots + tournament under this profile.
# `debug = 2` is what makes samply attribute samples to source lines
# AND resolve inlined helpers (e.g. `passable()` inside
# `leaf_heuristic()`) as their own call-tree frames — the difference
# between "96% in leaf_heuristic" and "60% in passable, 30% in
# cell_idx". Bigger debug sections + slower link; intentionally a
# separate target dir (`target/profiling/`) so normal `cargo build
# --release` runs stay lean.
#
# `split-debuginfo = "packed"`: on macOS the release default drops
# DWARF from the final binary (function names survive via STAB but
# `.debug_line` is gone), so samply's source view shows nothing.
# Packed mode runs `dsymutil` to produce a `<bin>.dSYM` bundle next
# to each binary; samply auto-discovers it and gets per-line +
# inlined-function info. Harmless on Linux (already produces inline
# DWARF; the setting is a no-op).
[profile.profiling]
inherits = "release"
debug = 2
split-debuginfo = "packed"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
thiserror = "2.0.18"
macroquad = "0.4"
egui-macroquad = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
cc = "1"
libc = "0.2"
rand = "0.10.1"

common = { path = "crates/common" }
viz = { path = "crates/viz" }
cgio_build = { path = "crates/cgio_build" }
bot_common = { path = "bots/common" }
bot_manifest = { path = "crates/bot_manifest" }

tron_defs = { path = "games/tron/defs" }
tron_game = { path = "games/tron/game" }
fantastic_bits_defs = { path = "games/fantastic_bits/defs" }
fantastic_bits_game = { path = "games/fantastic_bits/game" }
