[package]
name = "codingame_runner"
version.workspace = true
edition.workspace = true

# `lib` exposes `make_player` etc. to the `tournament` crate; `bin`
# (main.rs) is the user-facing CLI wrapper.
[lib]
path = "src/lib.rs"

[[bin]]
name = "codingame_runner"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
codingame_macros.workspace = true
common.workspace = true
tron_game.workspace = true
tictactoe_game.workspace = true
serde.workspace = true
fantastic_bits_game.workspace = true
