[package]
name = "tournament"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tournament"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
common.workspace = true
codingame_runner = { path = "../runner" }
tictactoe_game.workspace = true
tron_game.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
