[package]
name = "cgio_build"
version.workspace = true
edition.workspace = true
description = "Shared build-script helpers for C++ bot crates: compile bot.cpp into a cdylib + main.cpp into a [[bin]], with the force-load and exported-symbols dance the runner's PluginPlayer requires."

[dependencies]
cc.workspace = true
