[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
# Bot-facing trait surface is in `bot_common`; we re-export it so
# engine-side callers can keep writing `common::WireInput` etc.
bot_common.workspace = true

anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
bincode.workspace = true
rand.workspace = true
tracing = "0.1.44"

# Optional — enabled by binaries that flatten `EngineFlags` into their
# clap CLI (runner, tournament). Off by default so the bot crates +
# game crates that pull in `common` for the engine traits don't drag
# clap (+ syn/quote) into their compile graph.
clap = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[features]
default = []
cli = ["dep:clap"]
