[package]
name = "tournament"
version.workspace = true
edition.workspace = true

[[bin]]
name = "tournament"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
common.workspace = true
# `codingame_runner` re-exports the game types via the
# `for_each_game!` macro, so tournament doesn't need direct
# `tron_game` / `fantastic_bits_game` deps.
codingame_runner = { path = "../runner" }
bot_manifest.workspace = true
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
