[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
handlebars = "6"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
toml_edit = "0.22"   # round-trip editing of foreign Cargo.toml files (preserves user formatting)
toml = "0.8"         # serde round-trips for our own bot.toml manifests