[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
clap = { version = "4", features = ["derive"] }
handlebars = "6"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
toml_edit = "0.22"   # round-trip editing of foreign Cargo.toml files (preserves user formatting)
bot_manifest.workspace = true
cg_statement = { path = "../cg_statement" }  # called as library by the `statement` subcommand (upgrade / check / css-only paths)

[dev-dependencies]
tempfile = "3"