[package]
name = "tictactoe_cpp"
version.workspace = true
edition.workspace = true

# The bot is a C++ source file; this crate exists only to drive its
# compilation + linking through cargo. `crate-type = ["cdylib"]` is what
# produces the `.so`/`.dylib`/`.dll` the runner loads.
[lib]
crate-type = ["cdylib"]

[dependencies]
# Pure ordering dep — ensures `tictactoe_defs/build.rs` regenerates the
# C++ header before `build.rs` here tries to include it.
tictactoe_defs.workspace = true

[build-dependencies]
cc.workspace = true
