[package]
name = "tictactoe_cpp"
version.workspace = true
edition.workspace = true

# Two artifacts share this crate:
#   * `cdylib`  — `bot.cpp` compiled with FFI exports, loaded by the
#                 runner's `PluginPlayer`.
#   * `[[bin]]` — `main.cpp` compiled with an `int main()`-style loop
#                 reading from stdin / writing to stdout, spawned by the
#                 runner's `SubprocessPlayer`.
# Both compilations live in `build.rs`; per-target linker args (see
# `cargo::rustc-link-arg-cdylib` there) keep the FFI export-list flags
# off the binary.
[lib]
crate-type = ["cdylib"]

[[bin]]
name = "tictactoe_cpp_stdio"
path = "src/main.rs"

[dependencies]
# Pure ordering dep — ensures `tictactoe_defs/build.rs` regenerates the
# C++ header before `build.rs` here tries to include it.
tictactoe_defs.workspace = true

[build-dependencies]
cc.workspace = true
