[package]
name = "tictactoe_defs"
version.workspace = true
edition.workspace = true
# Claims a unique "native lib" name in cargo's dep graph so that cargo
# enforces strict build-script ordering for dependents — specifically,
# `tictactoe_cpp/build.rs` won't start until this crate's `build.rs` (which
# generates `include/tictactoe_defs.h`) has finished. We don't actually
# link a native library here.
links = "tictactoe_defs"

[dependencies]
anyhow.workspace = true
common.workspace = true
serde.workspace = true

[build-dependencies]
cbindgen = "0.29.2"
