[package]
name = "fantastic_bits_v1_cpp"
version.workspace = true
edition.workspace = true

# Single artifact: a `cdylib` produced from `bot.cpp` for the runner's
# `PluginPlayer` to dlopen. No stdio subprocess transport for this bot
# variant — add a `main.cpp` and a `[[bin]]` entry if you want one;
# `cgio_build` picks it up automatically.
[lib]
crate-type = ["cdylib"]

[dependencies]
fantastic_bits_defs.workspace = true

[build-dependencies]
cgio_build.workspace = true
