[package]
name = "tictactoe_baseline_cpp"
version.workspace = true
edition.workspace = true

# Two artifacts share this crate:
#   * `cdylib`  — `bot.cpp` compiled with FFI exports, loaded by the
#                 runner's `PluginPlayer`.
#   * `[[bin]]` — `main.cpp` compiled with an `int main()`-style loop
#                 reading from stdin / writing to stdout, spawned by the
#                 runner's `SubprocessPlayer`.
# Both compilations are driven by `cgio_build::build` in `build.rs`.
[lib]
crate-type = ["cdylib"]

[[bin]]
name = "tictactoe_baseline_cpp_stdio"
path = "src/main.rs"

[dependencies]
tictactoe_defs.workspace = true

[build-dependencies]
cgio_build.workspace = true
