[package]
name = "fantastic_bits_v1_cpp"
version.workspace = true
edition.workspace = true

# Two artifacts share this crate:
#   * `cdylib`  — `bot.cpp` compiled with FFI exports, loaded by the
#                 runner's `PluginPlayer`.
#   * `[[bin]]` — `main.cpp` compiled with an `int main()`-style loop
#                 reading from stdin / writing to stdout, spawned by the
#                 runner's `SubprocessPlayer`. Same file is the entry
#                 point cpp_flatten bundles for CodinGame submission.
# Both compilations share `strategy.h` (single source of truth for
# the per-turn logic) and are driven by `cgio_build::build` in
# `build.rs`.
[lib]
crate-type = ["cdylib"]

[[bin]]
name = "fantastic_bits_v1_cpp_stdio"
path = "src/main.rs"

[dependencies]
# Pure ordering dep — ensures `fantastic_bits_defs/build.rs` regenerates
# the C++ header before `build.rs` here tries to include it.
fantastic_bits_defs.workspace = true

[build-dependencies]
cgio_build.workspace = true
